--- a/playground/package.json
+++ b/playground/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "reactjs-tiptap-editor": "workspace:*"
+    "@remarkablejames/rich-text-editor": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
